// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fail to parse non-objects 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "object",
    "message": "Expected an object, received null",
    "path": [],
    "received": "null",
  },
]
`;

exports[`should fail to parse objects where the tag does not match 1`] = `
[
  {
    "code": "invalid_tagged_union",
    "message": "Expected "plane" | "car", received a string",
    "options": [
      "plane",
      "car",
    ],
    "path": [
      "type",
    ],
  },
]
`;

exports[`should fail to parse objects without the proper tag 1`] = `
[
  {
    "code": "invalid_tagged_union",
    "message": "Expected "plane" | "car", received undefined",
    "options": [
      "plane",
      "car",
    ],
    "path": [
      "type",
    ],
  },
]
`;
